--- a/style.css
+++ b/style.css
@@ -1299,3 +1299,20 @@ footer {
     text-decoration: none;
 
 }
+
+.fullDoc{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    background-color: #333333d0;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 234;
+    padding: 30px;
+}
+.fullDoc img{
+    max-width: 100%;
+    max-height: 550px;
+}
